Bug 1472465 - Update flattened nsDisplayOpacity geometry despite empty invalidation region r=mattwoodrow

MozReview-Commit-ID: 7mrTuQ6gEoA